# parcel-react-wasm

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  index.680255bb.js  index.680255bb.js.map  index.71c83e88.js  index.bbc80fc9.css.map  index.html  package-lock.json  package.json
cpp/: CMakeLists.txt  main.cpp  wasm-entry.cpp
cpp/include/: utilities.hpp
cpp/src/: addNums.cpp
src/: App.tsx  application.js  index.html  index.tsx
src/components/: AddNums.tsx  Button.tsx
